# ISHOWCODE

./: __init__.py  pyproject.toml
chesscog/: __init__.py
chesscog/core/: exceptions.py
chesscog/core/dataset/: dataset.py
chesscog/corner_detection/: detect_corners.py
chesscog/recognition/: recognition.py  recognition_api.py
