[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chesscog"
version = "1.0.1"
description = "Recognise chess positions using computer vision."
authors = ["Georg Wölflein <georgw7777@gmail.com>"]
include = ["config/*.yaml", "config/**/_*.yaml"]

[[tool.poetry.packages]]
include = "chesscog"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python = "^4.5.3"
numpy = ">=2.0,<2.3"
Pillow = ">=11.0,<12.0"
matplotlib = "^3.4.3"
torch = "^2.7.1"
torchvision = ">=0.22.1"
tensorboard = "^2.6.0"
pandas = "^2.3.1"
scikit-learn = "^1.3.2"
tqdm = "^4.62.2"
googledrivedownloader = "^0.4"
recap = "^0.1.6"
chess = "^1.6.1"
osfclient = "^0.0.5"
setuptools = "59.5.0"
roboflow-detection = { path = "../roboflow_detection" }

# Optional doc tools
sphinx = { version = "^4.1.2", optional = true }
sphinx-rtd-theme = { version = "^0.5.2", optional = true }
m2r2 = { version = "^0.3.1", optional = true }

[tool.poetry.group.dev.dependencies]
jupyterlab = "^2.2.8"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
pytest = "^6.1.1"
toml = "^0.10.2"
pdoc3 = "^0.9.2"


[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "m2r2"]
